# DINOv2-Feature-Extraction

./: .envrc  Makefile  README.md  feature_extraction.py  image_urls.json  pyproject.toml
